--- a/src/template.html
+++ b/src/template.html
@@ -119,7 +119,7 @@
         </div>
         <div class="HBD-text">
           <p class="HBD">{{^HBD_MSG}}</p>
-          <p class="nickname">{{^NICKNAME}}</p>
+          <p class="nickname">{{^NICKNAME}} Singla</p>
         </div>
       </div>
 
@@ -132,7 +132,7 @@
     <div class="flash"></div>
 
     <div class="giftroom">
-      <p class="gift-text">Wow! That was something weird.</p>
+      <p class="gift-text">Woah! That was something weird.</p>
       <p class="gift-text">Hey look! There's a gift for you..</p>
       <p class="gift-text">C'mon, let's open it and see what's in there!</p>
     </div>
